correct processingorg view tab spacing.

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -441,8 +441,8 @@
 }
 
 .tab-content {
-  margin-left: govuk-spacing(3);
-  margin-right: govuk-spacing(3);
+  margin-left: govuk-spacing(5);
+  margin-right: govuk-spacing(5);
 }
 
 .govuk-pagination__item--ellipses__hidden {
